added a wrapper to my page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>pigy dice gameS</title>
+    <title>pigy dice games</title>
   </head>
   <body>
+    <div id="wrapper">
+      <div id="menu">
+        
 
+      </div>
+        </div>
   </body>
 </html>
