added h1 h2 and a button to my page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>pigy dice games</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div id="wrapper">
-      <div id="menu">
-        
+    <div class="container">
+   <h1 id="show">Pig Dice</h1><br/>
+   <h2 class="h2">Welcome to the dice corner.</h2>
 
-      </div>
-        </div>
+   <div id="home">
+     <p>Enjoy the fun side of the game with your friend!</p>
+     <label for="button">Play Game.</label><br>
+     <button class="btn btn-info" value="Start">Start</button>
+   </div>
+   <div id="instructions">
+      <h2>Help</h2>
+      <ol>
+        <li>Press the button with the value run to roll the dice.</li>
+        <li>If the dice returns a value that is 1; player 2 rolls the dice. Else keep tossing.</li>
+        <li>Press hold to double your scores and pass the dice to the next player.</li>
+        <li>Whoever reaches 50 scores first wins!</li>
+      </ol>
+    </div>
+
   </body>
 </html>
