added some styles to my index page

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <div class="container">
-   <h1 id="show">Pig Dice</h1><br/>
-   <h2 class="h2">Welcome to the dice corner.</h2>
+   <h1 id="show">Pigy Dice Game</h1><br/>
+   <h2 class="h2">spine the dice.</h2>
 
    <div id="home">
-     <p>Enjoy the fun side of the game with your friend!</p>
+     <p>Enjoy spining the dice with your friend!</p><br>
      <label for="button">Play Game.</label><br>
-     <button class="btn btn-info" value="Start">Start</button>
+     <button class="btn btn-primary" value="Start">Start</button>
    </div>
    <div id="instructions">
       <h2>Help</h2>
@@ -24,6 +24,26 @@
         <li>Whoever reaches 50 scores first wins!</li>
       </ol>
     </div>
+    <div class="row">
+      <div id="game1" class="col col-md-6">
+        <h2>Player 1</h2><br>
+        <h3>Score:<span id="score1"></span></h3><br>
+        <h3>Tally:<span id="tally1"></span></h3>
+      </div>
+      <div id="game2" class="col col-md-6">
+        <h2>Player 2</h2><br>
+        <h3>Score:<span id="score2"></span></h3><br>
+        <h3>Tally:<span id="tally2"></span></h3>
+      </div><br>
+      <button id="run" class="btn btn-danger" type="submit">Run</button>
+      <button id="hold"  class="btn btn-success" type="submit">Hold</button><br>
+      <div id="result">
+          <h2 class="result">Score Board</h2>
+          <h2><span id="results"></span></h2>
+        </div>
+      </div>
+
+</div>
 
   </body>
 </html>
