--- a/index.html
+++ b/index.html
@@ -2,56 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>pigy dice games</title>
+    <title></title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
-
   <body>
-
-    <div class="container">
-   <h1 id="show">Pigy Dice Game</h1><br/>
-   <h2 class="h2">spine the dice.</h2>
-
-   <div id="home">
-     <p>Enjoy spining the dice with your friend!</p><br>
-     <button class="btn btn-primary" value="Start">Start</button>
-   </div>
-
-   <div id="instructions">
-      <h2>Help</h2>
-      <ol>
-        <li>Press the button with the value run to roll the dice.</li>
-        <li>If the dice returns a value that is 1; player 2 rolls the dice. Else keep tossing.</li>
-        <li>Press hold to double your scores and pass the dice to the next player.</li>
-        <li>Whoever reaches 50 scores first wins!</li>
-      </ol>
-    </div>
-
-    <div class="row">
-      <div id="game1" class="col col-md-6">
-        <h2>Player 1</h2><br>
-        <h3>Score:<span id="score1"></span></h3><br>
-        <h3>Tally:<span id="tally1"></span></h3>
-      </div>
-
-
-      <div id="game2" class="col col-md-6">
-        <h2>Player 2</h2><br>
-        <h3>Score:<span id="score2"></span></h3><br>
-        <h3>Tally:<span id="tally2"></span></h3>
-      </div><br>
-
-      <button id="run" class="btn btn-danger" type="submit">Run</button>
-      <button id="hold"  class="btn btn-success" type="submit">Hold</button><br>
-
-      <div id="result">
-          <h2 class="result">Score Board</h2>
-          <h2><span id="results"></span></h2>
+    <div class="wrapper cleafix">
+      <div class="player-0-panel active">
+        <div class="player-name" id="name-0">player 1</div>
+        <div class="player-score" id="score-0">43</div>
+        <div class="player-current-box">
+        <div class="player-current-label">current</div>
+          <div class="player-current-score" id="current-0">11</div>
         </div>
-
       </div>
+      <div class="player-0-panel active">
+        <div class="player-name" id="name-0">player 1</div>
+        <div class="player-score" id="score-0">43</div>
+        <div class="player-current-box">
+        <div class="player-current-label">current</div>
+          <div class="player-current-score" id="current-0">11</div>
+        </div>
+      </div>
+      <button class="btn-new"><i class="ion-ios-plus-outline"></i>new game</button>
+        <button class="btn-roll"><i class="ion-ios-loop"></i>roll dice</button>
+          <button class="btn-hold"><i class="ion-ios-download-outline"></i>hold</button>
 
-</div>
+          <img src="dice-5.png" alt="dice" class="dice">
+    </div>
+    <script type="text/javascript">
 
+    </script>
   </body>
 </html>
