--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
   </head>
   <body>
     <div class="wrapper cleafix">
+      <h2><em><u><strong> Enjoy rolling a dice with your friend!</u></h2>
       <div class="player-0-panel active">
         <div class="player-name" id="name-0">player 1</div>
-        <div class="player-score" id="score-0">43</div>
+        <div class="player-score" id="score-0">0</div>
         <div class="player-current-box">
-        <div class="player-current-label">current</div>
-          <div class="player-current-score" id="current-0">11</div>
+        <div class="player-current-label">CURRENT SCORES</div>
+          <div class="player-current-score" id="current-0">0</div>
         </div>
       </div>
       <div class="player-0-panel active">
         <div class="player-name" id="name-0">player 2</div>
-        <div class="player-score" id="score-0">43</div>
+        <div class="player-score" id="score-0">0</div>
         <div class="player-current-box">
-        <div class="player-current-label">current</div>
-          <div class="player-current-score" id="current-0">11</div>
+        <div class="player-current-label">CURRENT SCORES</div>
+          <div class="player-current-score" id="current-0">0</div>
         </div>
       </div>
-      <button class="btn-new"><i class="ion-ios-plus-outline"></i>new game</button>
-        <button class="btn-roll"><i class="ion-ios-loop"></i>roll dice</button>
-          <button class="btn-hold"><i class="ion-ios-download-outline"></i>hold</button>
+        <button  class="btn-roll" >ROLL DICE</button>
+        <button class="btn-hold">HOLD SCORES</button>
 
-          <img src="dice-5.png" alt="dice" class="dice">
+          <img src="img/side1.png" alt="dice" class="dice">
     </div>
     <script type="text/javascript">
 
