--- a/index.html
+++ b/index.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+<html>
+<head>
+<title></title>
 
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+<script src="js/jquery-3.3.1.js"></script>
 
-  </head>
+<script>
+function rollDice(){
+ var die1=document.getElementById('die1');
+   var die2=document.getElementById('die2');
+   var status= document.getElementById('status');
 
-  <body>
-    <div class="wrapper cleafix">
+   var d1 =Math.floor(Math.random() * 6) + 1;
+   var d2 =Math.floor(Math.random() * 6) + 1;
 
-      <h2><em><u><strong> Enjoy rolling a dice with your friend!</u></h2>
+   var diceTotal = d1 + d2;
+   die1.innerHTML = d1;
+   die2.innerHTML = d2;
 
-      <div class="player-0-panel active">
-        <div class="player-name" id="name-0">player 1</div>
-        <div class="player-score" id="score-0">0</div>
+
+   status.innerHTML ="YOU SPINNED "+diceTotal+" .";
+   if (d1 == d2){
+     status.innerHTML += "DOUBLES! Therefore you are the lucky WINNER!";
+   }
+
+}
+
+</script>
+</head>
+<body>
+<div class="wrapper cleafix">
+  <h2 id="status" style="clear: left;"></h2>
+
+
+        <div class="player-0-panel active">
+         <div class="player-name" id="name-0">DICE 1</div>
+        <div id="die1" class="die">0</div>
         <div class="player-current-box">
-        <div class="player-current-label">CURRENT SCORES</div>
-          <div class="player-current-score" id="current-0">0</div>
+           <div class="player-current-label">CURRENT SCORES</div>
+             <div class="player-current-score" id="current-0">0</div>
+           </div>
         </div>
-      </div>
 
 
-      <div class="player-0-panel active">
-        <div class="player-name" id="name-0">player 2</div>
-        <div class="player-score" id="score-0">0</div>
-        <div class="player-current-box">
-        <div class="player-current-label">CURRENT SCORES</div>
-          <div class="player-current-score" id="current-0">0</div>
-        </div>
-      </div>
+          <div class="player-1-panel active">
+            <div class="player-name" id="name-0">DICE 2</div>
+           <div id="die2" class="die">0</div>
+           <div class="player-current-box">
+             <div class="player-current-label"><strong><em>CURRENT SCORES</div>
+               <div class="player-current-score" id="current-0">0</div>
+             </div>
+          </div>
 
-        <button  class="btn-roll" >ROLL DICE</button>
-        <button class="btn-hold">HOLD SCORES</button>
 
-          <img src="img/side1.png" alt="dice" class="dice">
-    </div>
-    <script type="text/javascript">
+ <button onclick="rollDice()" class="btn-roll" >Roll Dice</button>
+ <button class="btn-hold">HOLD SCORES</button>
 
-    </script>
-  </body>
+
+ <img src="img/side1.png" alt="dice" class="dice">
+
+</div>
+</body>
 </html>
