added some designs to my page and readme

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function rollDice(){
          <div class="player-name" id="name-0">DICE 1</div>
         <div id="die1" class="die">0</div>
         <div class="player-current-box">
-           <div class="player-current-label">CURRENT SCORES</div>
+           <div class="player-current-label"><strong><em>PLAYER 1</strong></em></div>
              <div class="player-current-score" id="current-0">0</div>
            </div>
         </div>
@@ -49,7 +49,7 @@ function rollDice(){
             <div class="player-name" id="name-0">DICE 2</div>
            <div id="die2" class="die">0</div>
            <div class="player-current-box">
-             <div class="player-current-label"><strong><em>CURRENT SCORES</div>
+             <div class="player-current-label"><strong><em>PLAYER 2</strong></em></div>
                <div class="player-current-score" id="current-0">0</div>
              </div>
           </div>
