--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@ function rollDice(){
 
 
         <div class="player-0-panel active">
-         <div class="player-name" id="name-0">DICE 1</div>
+         <div class="player-name" id="name-0">PLAYER 1</div>
         <div id="die1" class="die">0</div>
         <div class="player-current-box">
-           <div class="player-current-label"><strong><em>PLAYER 1</strong></em></div>
+           <div class="player-current-label"><strong><em>CURRENT SCORES</strong></em></div>
              <div class="player-current-score" id="current-0">0</div>
            </div>
         </div>
 
 
           <div class="player-1-panel active">
-            <div class="player-name" id="name-0">DICE 2</div>
+            <div class="player-name" id="name-0">PLAYER 2</div>
            <div id="die2" class="die">0</div>
            <div class="player-current-box">
-             <div class="player-current-label"><strong><em>PLAYER 2</strong></em></div>
+             <div class="player-current-label"><strong><em>CURRENT SCORES</strong></em></div>
                <div class="player-current-score" id="current-0">0</div>
              </div>
           </div>
